# ColorWall

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  build.rs
.githooks/: pre-commit
src/: main.rs
src/spotify/: auth.rs  client.rs  models.rs
src/storage/: tokens.rs
src/transfer/: sync.rs
