[package]
name = "spotify-sync"
version = "0.1.0"
edition = "2021"
authors = ["laxenta"]
description = "Transfer Spotify playlists between accounts"
license = "GPL-3.0"
repository = "https://github.com/laxenta/spotify-sync-CLI"
keywords = ["spotify", "music", "cli", "sync", "transfer"]
categories = ["command-line-utilities"]

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
tiny_http = "0.12"
webbrowser = "1.0"
anyhow = "1.0"
dotenv = "0.15"
dirs = "5.0"
urlencoding = "2.1"
indicatif = "0.17"